--- a/config/dev.env
+++ b/config/dev.env
@@ -1,10 +1,10 @@
 NODE_ENV=development
 PORT=5000
 
-MONGODB_URI=
+MONGODB_URI=mongodb://localhost/instructor-learner
 
 GEOCODER_PROVIDER=mapquest
-GEOCODER_API_KEY=
+GEOCODER_API_KEY=gfdgd
 
 JWT_SECRET=
 JWT_EXPIRE=10d
