--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "content_security_policy": "script-src: 'self' 'unsafe-inline'",
   "scripts": {
-    "start": "env-cmd -f ./config/.env node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "start": "env-cmd -f ./config/.env node bin/www",
+    "dev": "env-cmd -f ./config/dev.env nodemon bin/www",
     "test": "node src/index.js"
   },
   "author": "Anukul",
